<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/translator" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/translator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/translate_provider"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_language" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/src_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/language"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_language" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/translate_to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/language"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/skip_already_translate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:text="@string/skip_already_translated" />

    </LinearLayout>

</RelativeLayout>