<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/class_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/search_class_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/class_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ignore_name_descriptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/ignore_name_descriptor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/search_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ignore_descriptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/ignore_descriptor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptor_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/search_descriptor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/descriptor_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>