<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/src_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/search_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/src_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/from_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/from_start" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/replace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/replace_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/replace_dst_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/replace_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>